# pre-commit-fail-randomly

./: .bumpversion.cfg  .flake8  .pre-commit-hooks.yaml  .ruff.toml  README.md  pyproject.toml  tox.ini
.github/workflows/: lint_test.yml  pypi_release.yml
pre_commit_fail_randomly/: fail_randomly.py
